# agentick.io

./: .gitignore  README.md  daily_log.md  dokuman.md  main.py  mimari.md  pyproject.toml  roadmap.md
backend/: auth.py  main.py
backend/routes/: compare.py  fetch_data.py  fetch_news.py  portfolio.py  query.py  upload.py
backend/services/: metrics_utils.py  pdf_pipeline.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentLogo.tsx  ChatInput.tsx  ComparisonChat.tsx  ComparisonTable.tsx  ConcentrationWarnings.tsx  DividendCalendar.tsx  Message.tsx  PortfolioChat.tsx  PortfolioHoldingsTable.tsx  PortfolioManager.tsx  PortfolioNews.tsx  PortfolioSummaryCards.tsx  SectorChart.tsx  Sidebar.tsx  ThinkingIndicator.tsx  TickerSelector.tsx
frontend/src/config/: firebase.ts
frontend/src/constants/: tickers.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ChatPage.tsx  ComparePage.tsx  LoginPage.tsx  PortfolioPage.tsx
frontend/src/services/: conversationStorage.ts  portfolioService.ts
src/: cli_test.py
src/agent/: __init__.py  critic_node.py  graph.py  planner_node.py  router_node.py  state.py  synthesizer_node.py
src/ingestion/: bist_finance_client.py  build_vector_index.py  kap_client.py  news_client.py  pdf_chunker.py
src/retrievers/: news_retriever.py  sql_retriever.py  vector_retriever.py
