[project]
name = "agentick-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.115.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "langgraph>=0.2.0",
    "openai>=2.45.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.30.0",
    "voyageai>=0.5.0",
    "yfinance>=1.5.1",
]
